kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fa-tagger
  labels:
    app: fa-tagger
spec:
  selector:
    app: fa-tagger
  ports:
    - name: http
      port: 80
      protocol: TCP
